--- a/deploy/memelordz/values.yaml
+++ b/deploy/memelordz/values.yaml
@@ -1,7 +1,7 @@
 replicaCount: 2
 
 image:
-  repository: bloodorangeio/memelordz
+  repository: rfolkker/memelordz
   tag: master
   pullPolicy: Always
 
