--- a/cluster-issuer.yaml
+++ b/cluster-issuer.yaml
@@ -1,14 +1,14 @@
 apiVersion: certmanager.k8s.io/v1alpha1
 kind: ClusterIssuer
 metadata:
-  name: letsencrypt-prod
+  name: letsencrypt-dev
 spec:
   acme:
     solvers:
       - http01:
           ingress:
             class: nginx
-    email: info@bloodorange.io
+    email: ye5400qc@my.century.edu
     privateKeySecretRef:
-      name: letsencrypt-prod
+      name: letsencrypt-dev
     server: https://acme-v02.api.letsencrypt.org/directory
